test/libsolidity/syntaxTests/nameAndTypeResolution/523_reject_interface_creation.sol
interface I {}
contract C {
    function f() public {
        new I();
    }
}
// ----
// TypeError 2971: (62-67='new I'): Cannot instantiate an interface.
